--- a/css/friend.css
+++ b/css/friend.css
@@ -64,3 +64,12 @@
 .friend__now-listening i {
   font-size: 12px;
 }
+
+.friend__add-btn {
+  padding: 10px 15px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+}
