--- a/css/more.css
+++ b/css/more.css
@@ -10,8 +10,8 @@
 .more .suggestion {
   margin-right: 40px;
   display: flex;
-  align-items: center;
   flex-direction: column;
+  align-items: center;
   cursor: pointer;
 }
 
@@ -31,17 +31,19 @@
 }
 
 .suggestion .suggestion__title {
+  font-size: 12px;
   margin-top: 15px;
 }
 
 .suggestion .suggestion__icon {
   background-color: #fce006;
   padding: 10px;
-  border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 10px;
 }
+
 .suggestion__icon i {
   font-size: 28px;
   color: white;
