--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
 @import "friends.css";
 @import "find.css";
 @import "more.css";
+@import "settings.css";
+@import "chat.css";
 
 * {
   box-sizing: border-box;
